# django-tailwind4

./: .gitignore  MANIFEST.in  README.md  ReadME.md  pyproject.toml
django-tailwind-v4/: apps.py
django-tailwind-v4/management/commands/: tailwind_init.py
django-tailwind-v4/templates/django_tailwind4/: package.json
django_tailwind4/: apps.py
django_tailwind4/management/commands/: tailwind_build.py
django_tailwind_v4/: apps.py
django_tailwind_v4/management/commands/: tailwind_init.py
django_tailwind_v4/templates/django_tailwind_v4/: tailwind.config.js
