[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-tailwind-v4"
version = "0.1.2"
authors = [
  { name="kothasaikrishna", email="kotha.saikrishna07@gmail.com" },
]
description = "A simple Django app to integrate Tailwind CSS v4."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "Django>=4.2",
]

[project.urls]
Homepage = "https://github.com/sai-krishna-kotha/django-tailwind4"
Issues = "https://github.com/sai-krishna-kotha/django-tailwind4/issues"

# ADD THIS NEW SECTION AT THE END
[tool.setuptools]
packages = ["django-tailwind-v4"]
include-package-data = true 